Add checkin workflow, and SITE_CONFIG env-var
